syntax = "proto3";

option csharp_namespace = "MeterReadingService.WebApi";

import "google/protobuf/Timestamp.proto";
import "google/protobuf/Empty.proto";

service PowerMeterReading {
  rpc StreamPowerReadings (stream PowerMeterReadingMessage) returns (google.protobuf.Empty);
  rpc AddPowerReading (PowerMeterReadingMessage) returns (google.protobuf.Empty);
  rpc AbnormalPowerConsumptionDetected (PowerMeterReadingMessage) returns (google.protobuf.Empty);
}

message PowerMeterReadingMessage {
  int32 customerId = 1;
  string meterId = 2;
  double value = 3;
  google.protobuf.Timestamp readingTime = 4;
}